plugins {
    id 'java'
    id 'application'
}

group 'at.fhv'
version '1.0-SNAPSHOT'
sourceCompatibility = '11'

application {
    mainClass.set('at.fhv.ae.Main')
}

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/org.postgresql/postgresql - Postgres driver
    implementation 'org.postgresql:postgresql:42.2.1'
    // https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api - JPA
    implementation 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
    // https://mvnrepository.com/artifact/com.zaxxer/HikariCP - DB Connection Pooling
    implementation 'com.zaxxer:HikariCP:5.0.1'
    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core - Hibernate
    implementation 'org.hibernate:hibernate-core:5.6.5.Final'
    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    implementation project(':shared')

    testImplementation 'com.h2database:h2:2.1.210'
    testImplementation 'org.mockito:mockito-core:4.4.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    useJUnitPlatform()
}